--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,19 @@
-.App {
-  text-align: center;
+div {
+  border: 1px solid black;
+  padding: 10px;
+  background: white;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+div.dark {
+  background: rgb(56, 51, 51);
+}
+div.light {
+  background: #ccc;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h3.dark {
+  color: black;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3.light {
+  color: #ccc;
 }
